# squill

./: .env.sh  .gitignore  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  one-sql.code-workspace
.cargo/: audit.toml
.github/workflows/: agent-coverage.yml  agent.yml  client.yml  node.js.yml  unit-tests.yml
agent/: .prettierrc.toml  .tarpaulin.toml  CONTRIBUTING.md  Cargo.toml  README.md  api.yaml
agent/.cargo/: config.toml
agent/assets/agent/: setup.sql
agent/assets/drivers/duckdb/: duckdb.yaml  macros.j2
agent/assets/drivers/mariadb/: mariadb.yaml
agent/assets/drivers/mysql/: macros.j2  mysql.yaml
agent/assets/drivers/oracle/: oracle.yaml
agent/assets/drivers/postgresql/: macros.j2  postgresql.yaml  uri.j2
agent/assets/drivers/sqlite/: macros.j2  sqlite.yaml  uri.j2  uri.jinja
agent/src/: agent_db.rs  build.rs  commandline.rs  error.rs  main.rs  pid_file.rs  pool.rs  server.rs  settings.rs
agent/src/api/: agent.rs  auth.rs  connections.rs  context.rs  error.rs  mod.rs  users.rs
agent/src/jinja/: env.rs  exceptions.rs  functions.rs  mod.rs
agent/src/models/: agent.rs  auth.rs  collections.rs  connections.rs  dataframes.rs  datasources.rs  drivers.rs  environments.rs  errors.rs  folders.rs  mod.rs  push_notifications.rs  queries.rs  query_execution.rs  resources.rs  scheduled_tasks.rs  storages.rs  user_settings.rs  users.rs  variables.rs  workspaces.rs
agent/src/resources/: agent.rs  catalog.rs  collections.rs  connections.rs  environments.rs  folders.rs  mod.rs  queries.rs  scheduled_tasks.rs  users.rs  workspaces.rs
agent/src/server/: context.rs  contexts.rs  mod.rs  notification_channel.rs  notification_channels.rs  pid_file.rs  state.rs  user_sessions.rs  web.rs
agent/src/tasks/: mod.rs  queries.rs  scheduled_tasks.rs  statistics.rs
agent/src/utils/: arrow_json.rs  constants.rs  macros.rs  mod.rs  parquet.rs  tests.rs  types.rs  user_error.rs  users.rs  validators.rs
agent/users/local/: .user.json
client/: .eslintrc.json  .gitignore  forge.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
client/public/datasets/: simpsons.csv
client/src/: declarations.d.ts  main.tsx  tauri.d.ts
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.release.conf.json
client/src-tauri/.cargo/: config.toml
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: agent.rs  commands.rs  main.rs
client/src-tauri/src/models/: agent.rs
client/src/__tests__/: agent.test.ts  setup.ts
client/src/__tests__/models/: variable.test.ts
client/src/__tests__/previews/: Preview.tsx  PreviewBox.tsx  PreviewSidebarItem.tsx  PreviewsApp.tsx  previews.html  previews.tsx  previews.vite.config.ts  previewsStore.ts
client/src/__tests__/resources/: collection-items.test.ts  resource-ref.test.ts  resource.test.ts  user.test.ts
client/src/__tests__/stores/: UserStore.test.ts
client/src/__tests__/utils/: classes.test.ts  colors.test.ts  commands.test.ts  env.test.ts  serializable.test.ts  serializers.test.ts  telemetry.test.ts  time.test.ts
client/src/api/v1/: user.ts  workspace.ts
client/src/assets/datasets/: persons.arrow  persons.parquet
client/src/assets/styles/: colors.less  hljs-dark.less  hljs-light.less  main.css  main.less  table-view.less  timeline.less
client/src/common/components/: App.tsx  ApplySystemPreferences.tsx  Editor.tsx  Main.tsx  Page.tsx  PageLinks.tsx  PageLoader.tsx
client/src/common/resources/: agent.ts  editors.ts  resource-ref.ts  resource.ts
client/src/common/stores/: ColorsContext.ts  CommandStore.ts  UserStore.ts  WorkspaceStore.ts
client/src/common/utils/: auth.ts  classes.ts  colors.ts  commands.ts  constants.ts  env.ts  monaco-workers.ts  plateform.ts  serializable.ts  telemetry.ts  types.ts
client/src/components/: App.tsx  ApplySystemPreferences.tsx  CommandLinks.tsx  CommandManager.tsx  Editor.tsx  Main.tsx  Modal.tsx  Overlay.tsx  Page.tsx  PageLinks.tsx  PageLoader.tsx  Stepper.tsx
client/src/components/core/: Alert.tsx  AutoHide.tsx  Breadcrumb.tsx  Button.tsx  ButtonGroup.tsx  Code.tsx  CommandButton.tsx  CommandLink.tsx  CommandLinkList.tsx  Dropdown.tsx  ErrorMessage.tsx  FileInput.tsx  Input.tsx  KBD.tsx  Kbd.tsx  LoadingContainer.tsx  Menu.tsx  NotificationInbox.tsx  Radio.tsx  RelativeDate.tsx  ResizeHandle.tsx  ResizePanel.tsx  SidePanel.tsx  Spinner.tsx  StackedBarChart.tsx  Switch.tsx  Timeline.tsx  Toast.tsx  Toolbar.tsx  Tooltip.tsx  TreeView.tsx  UserErrorMessage.tsx
client/src/components/dataset/: table-view.tsx  (+1 more)
client/src/desktop/: forge.config.js  vite.main.config.ts  vite.renderer.config.ts
client/src/hooks/: loading.ts  use-commands.ts  use-query-cache.ts  use-query-history.ts  use-query-suggestion.ts  use-radio.ts  use-resizable.ts  use-task-effect.ts  use-validity-state.ts
client/src/models/: agent.ts  attribute-format.ts  attribute.ts  auth.ts  collections.ts  connections.ts  dataframe-schema.ts  dataframes.ts  dataset-attribute-format.ts  dataset-attribute-statistics.ts  dataset-attribute.ts  dataset-schema.ts  datasources.ts  drivers.ts  environments.ts  folders.ts  push-notifications.ts  queries.ts  query-execution.ts  resources.ts  scheduled-tasks.ts  storages.ts  user-settings.ts  users.ts  variables.ts  workspaces.ts
client/src/resources/: agent.ts  collection-item.ts  connections.ts  editors.ts  handlers.ts  queries.ts  resource.ts  resources.ts  serialized.ts  users.ts  workspaces.ts
client/src/stores/: AppStore.ts  FormContext.tsx  PagesStore.ts  SpaceStore.ts  UserStore.ts  WorkspaceStore.ts
client/src/utils/: colors.ts  commands.ts  constants.ts  dataframe.ts  dataset.ts  duration.ts  env.ts  errors.ts  format.ts  monaco-workers.ts  query-cache.ts  serializable.ts  serializers.ts  strings.ts  tauri.ts  time.ts  types.ts
common/: Cargo.toml
common/src/: constants.rs  lib.rs  pid_file.rs
drivers/: Cargo.toml
drivers/src/: driver.rs  factory.rs  lib.rs  pool.rs  value.rs
drivers/src/postgres/: mod.rs  value.rs
drivers/src/sqlite/: mod.rs  value.rs
(+154 files in other folders)
