[workspace]
resolver = "2"
members = [
    "agent",
    "drivers",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["pshampanier@gmail.com"]
repository = "https://github.com/pshampanier/squill"

[workspace.dependencies]
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }