[workspace]
resolver = "2"
members = [
    "agent",
    "drivers",
    "client/src-tauri",
]

[workspace.package]
version = "0.1.0"
description = "A Modern Data Management Console"
edition = "2021"
authors = ["pshampanier@gmail.com"]
repository = "https://github.com/pshampanier/squill"

[workspace.dependencies]
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }