[workspace]
resolver = "2"
members = ["agent", "drivers", "common", "client/src-tauri"]

[workspace.package]
version = "0.1.0"
description = "A Modern Data Management Console"
edition = "2021"
authors = ["pshampanier@gmail.com"]
repository = "https://github.com/pshampanier/squill"

[workspace.dependencies]
anyhow = "1.0.82"
tokio = "1.37.0"
serde = "1.0.195"
tracing = "0.1.40"
toml = "0.8.8"
lazy_static = "1.4.0"
tempfile = "3.9.0"
reqwest = "0.12.4"
futures = "0.3.30"
