[package]
name = "squill"
description = "Squill Agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
build = "src/build.rs"

[[bin]]
name = "agent"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { version="0.7.5", features = ["macros", "tracing"] }
clap = { version = "4.4.18", features = ["derive"] }
hex = "0.4.3"
lazy_static = "1.4.0"
lru = "0.12.1"
rand = "0.8.5"
regex = "1.10.3"
rust-ini = "0.20.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sysinfo = "0.30.5"
toml = "0.8.8"
tower-http = { version = "0.5.2",  features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features=["std", "env-filter"] }
tracing-appender = "0.2.3"
uuid = { version = "1.7.0", features = ["v4"] }
reqwest = "0.12.4"
drivers = { path = "../drivers" }

# The following dependencies are not directly used b the package but need to be forced to specific versions in order 
# to prevent vulnerabilities.
h2 = "0.4.4"

[dev-dependencies]
nix = { version = "0.27.1", features = ["signal", "process"] }
tempfile = "3.9.0"
tower = "0.4.13"

[build-dependencies]
git2 = "0.18.2" # dependency of built added manually to prevent a vulnerability present in the version used by built
built = { version = "0.7.1", features = ["git2"] }
