[package]
name = "agent"
description = "Squill Agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
build = "src/build.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { version="0.7.7", features = ["macros", "tracing", "ws"] }
axum-extra = { version="0.9.4", features = ["typed-header"] }
clap = { version = "4.4.18", features = ["derive"] }
hex = "0.4.3"
lazy_static = { workspace = true }
lru = "0.12.1"
rand = "0.8.5"
regex = "1.10.3"
rust-ini = "0.20.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.111"
tower-http = { version = "0.5.2",  features = ["trace", "cors", "util"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features=["std", "env-filter"] }
tracing-appender = "0.2.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
urlencoding = "2.1.3"
squill-drivers = { path = "../squill-drivers", features = ["async-conn", "sqlite", "duckdb", "serde"] }
loose-sqlparser = { path = "../loose-sqlparser-rs" }
common = { path = "../common" }
futures = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
serde_yml = "0.0.12"
flume = { version = "0.11.0", default-features = false, features = ["async", "select"] }
deadpool = "0.12.1"
minijinja = { version = "2.3.1", features = ["loader", "builtins", "urlencode"] }
num_cpus = "1.16.0"
arrow-array = { version = "53", default-features = false, features = ["chrono-tz"] }
arrow-ipc = { version = "53" }
arrow-schema = { version = "53" }
arrow-integration-test = { version = "53" }
parquet = { version = "53", default-features = false, features = ["arrow","async","snap"] }

# The following dependencies are not directly used b the package but need to be forced to specific versions in order 
# to prevent vulnerabilities.
# h2 = "0.4.4"
# openssl = "0.10.66"

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tower = "0.4.13"
nix = { version = "0.27.1", features = ["signal", "process"] }
common = { path = "../common", features = ["test-hooks"] }
tokio-test = "0.4"

[build-dependencies]
built = { version = "0.7.4", features = ["git2"] }
openapi-codegen = { git = "https://github.com/pshampanier/openapi-codegen-rs.git", branch = "main", version = "0.2" }
yaml-rust = "0.4.5"

[features]
default = []
bundled = ["squill-drivers/duckdb-bundled"]