[package]
name = "common"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[features]
test-hooks = []

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
sysinfo = "0.30.5"

[dev-dependencies]
tempfile = { workspace = true }
