[package]
name = "drivers"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
bb8 = "0.8.3"
futures = "0.3.30"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
postgres-openssl = "0.5.0"
openssl = "0.10.64"
