[package]
name = "squill"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

# FIXME: "devtools" & "macos-private-api" will prevent to publish on the Apple App Store
[dependencies]
serde = { workspace = true, features = ["derive"] }
lazy_static = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
common = { path = "../../common" }
tauri = { version = "1.5", features = [ "shell-sidecar",
    "window-start-dragging",
    "macos-private-api",
    "shell-open",
    "devtools",
    "process-command-api",
] }
serde_json = "1.0"
notify = "6.1.1"

[dev-dependencies]
common = { path = "../../common", features = ["test-hooks"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
